--- a/app/src/main/res/layout/fragment_pet_profile_view.xml
+++ b/app/src/main/res/layout/fragment_pet_profile_view.xml
@@ -14,7 +14,6 @@
         android:background="@color/pawty_yellow">
 
 
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -22,10 +21,10 @@
             tools:ignore="MissingConstraints">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_marginTop="20dp">
+                android:layout_width="wrap_content"
+                android:layout_height="898dp"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/pet_view_prof_pic"
@@ -35,33 +34,33 @@
                     android:src="@mipmap/rufus_profile_foreground" />
 
                 <Button
+                    android:id="@+id/pet_view_photosBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="View Photos"
-                    android:backgroundTint="@color/pawty_pill_blue"
                     android:layout_gravity="center"
-                    android:id="@+id/pet_view_photosBtn"/>
+                    android:backgroundTint="@color/pawty_pill_blue"
+                    android:text="View Photos" />
 
-        <!-- Schedule playdate button under profile info -->
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnSchedulePlaydate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginTop="16dp"
-            android:text="Schedule\n Playdate"
-            android:textColor="@android:color/white"
-            android:fontFamily="@font/marcellus"
-            app:cornerRadius="24dp"
-            app:icon="@drawable/ic_calendar"
-            app:iconTint="@null"
-            app:iconPadding="8dp"
-            app:iconGravity="textStart"
-            app:backgroundTint="@color/pawty_pill_blue"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:ignore="MissingConstraints" />
+                <!-- Schedule playdate button under profile info -->
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btnSchedulePlaydate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="24dp"
+                    android:fontFamily="@font/marcellus"
+                    android:text="Schedule\n Playdate"
+                    android:textColor="@android:color/white"
+                    app:backgroundTint="@color/pawty_pill_blue"
+                    app:cornerRadius="24dp"
+                    app:icon="@drawable/ic_calendar"
+                    app:iconGravity="textStart"
+                    app:iconPadding="8dp"
+                    app:iconTint="@null"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:ignore="MissingConstraints" />
             </LinearLayout>
 
             <LinearLayout
@@ -72,61 +71,303 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="60dp">
+                    android:layout_marginTop="60dp"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/pet_view_pet_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Rufus Smith"
-                        android:textSize="25sp"/>
+                        android:textSize="25sp" />
+
                     <TextView
                         android:id="@+id/pet_view_pet_age"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text=" (3 Yrs)"
-                        android:textSize="25sp"/>
+                        android:textSize="25sp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
                     android:layout_marginTop="10dp"
-                    >
+                    android:orientation="horizontal">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/fivestars"
-                    />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/fivestars" />
 
-                <TextView
-                    android:id="@+id/pet_view_reviews"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="See Reviews"
-                    android:layout_marginLeft="40dp"
-                    android:textColor="@color/pawty_dark_blue"
-                    android:clickable="true"
-                    android:onClick="ReviewsTextView"
-                    />
+                    <TextView
+                        android:id="@+id/pet_view_reviews"
+                        android:layout_width="wrap_content"
+                        android:layout_height="48dp"
+                        android:layout_marginLeft="40dp"
+                        android:clickable="true"
+                        android:onClick="ReviewsTextView"
+                        android:text="See Reviews"
+                        android:textColor="@color/pawty_dark_blue" />
                 </LinearLayout>
 
-
-                //
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginTop="50dp">
+                    android:layout_marginTop="30dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="About Me:"
+                        android:textColor="@color/pawty_dark_blue"
+                        android:textSize="20sp" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Birthdate: "
+                            android:textSize="18sp"/>
+
+                        <TextView
+                            android:id="@+id/pet_view_birthdate"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="12/13/21"
+                            android:textSize="18sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal"
+                        android:textSize="16sp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Species: "
+                            android:textSize="18sp" />
+
+                        <TextView
+                            android:id="@+id/pet_view_species"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Dog"
+                            android:textSize="18sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Breed(s): "
+                            android:textSize="18sp" />
+
+                        <TextView
+                            android:id="@+id/pet_view_breed"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Boxer"
+                            android:textSize="18sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Sex: "
+                            android:textSize="18sp" />
+
+                        <TextView
+                            android:id="@+id/pet_view_gender"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Male"
+                            android:textSize="18sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Weight: "
+                            android:textSize="18sp" />
+
+                        <TextView
+                            android:id="@+id/pet_view_weight"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=" 80 lbs"
+                            android:textSize="18sp" />
+                    </LinearLayout>
 
 
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/thumbs_up" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=":   "
+                            android:textSize="24dp" />
+
+                        <!--- doesn't show all information -->
+                        <TextView
+                            android:id="@+id/pet_view_pet_likes"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Gets along with kids, plays
+chase, fetch, peanut butter\n"
+                            android:textSize="18sp"/>
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="10dp">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/thumbs_down"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=":   "
+                            android:textSize="24dp" />
+
+                        <!--- doesn't show all information -->
+                        <TextView
+                            android:id="@+id/pet_view_pet_dislikes"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Leaf blowers, vacuums, mail men, chases cats, male dogs"
+                            android:textSize="18sp"/>
+                    </LinearLayout>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:text="Health Info: "
+                        android:textColor="@color/pawty_blue_dark"
+                        android:textSize="20sp"/>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="30sp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Medical Conditions: "
+                            android:textSize="16sp"/>
+                        <TextView
+                            android:id="@+id/pet_view_medical_conditions"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="None"
+                            android:layout_gravity="right"
+                            android:textSize="16sp"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal"
+                        android:layout_marginLeft="30sp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Medications: "
+                            android:textSize="16sp"/>
+
+                        <TextView
+                            android:id="@+id/pet_view_medications"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="None"
+                            android:textSize="16sp"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="30sp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Vaccinations: "/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Rabies\nDPP\nBordetella"
+                            android:textSize="16sp"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="30sp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Spayed/Neutered: "
+                            android:textSize="16sp"/>
+                        <TextView
+                            android:id="@+id/pet_view_spayed_neutered"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Yes"
+                            android:textSize="16sp"/>
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
